--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,13 @@
-
-body {
-    background-color: #494a87;
-    color: #d3d3ff;
+/* global reset */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box; 
 }
+/* end global reset */
+
+
+
+
+
+
