--- a/css/style.scss
+++ b/css/style.scss
@@ -6,8 +6,166 @@
 }
 /* end global reset */
 
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 10px 30px;
+    background-color: #333;
+    z-index: 100;
+    min-width: 100%;
+    color: white;
+}
+
+.section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3em;
+    color: white;
+}
+
+.section:nth-child(1) {
+    background-color: #1abc9c;
+}
 
 
+/* Slide 1 Styling */
+.slide:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 2em;
+    color: white;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
+
+input {
+    margin: 10px 0;
+    padding: 10px;
+}
+
+button {
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    border: none;
+}
+
+#formMessage {
+    margin-top: 10px;
+    color: red;
+    font-size: 16px;
+}
+
+.results {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+    padding: 30px 60px 120px 60px;
+}
+
+.no-results {
+    text-align: center;
+    grid-column: 1/-1;
+}
+
+.game {
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
+    transition: all 0.3s ease;
+    .game-details {
+        padding: 16px;
+        h2 {
+            margin: 8px 0;
+            font-weight: 500;
+            font-size: 20px;
+            color: black;
+        }
+        p {
+            font-weight: 300;
+            font-size: 16px;
+            color: black;
+        }
+    }
+    .more-details {
+        display: flex;
+        justify-content: space-between;
+        margin: 8px 0;
+        h6 {
+            color: green;
+        }
+        .game-extras {
+            display: flex;
+            gap: 8px;
+            p {
+                font-weight: 400;
+                color: rgb(155, 162, 169);
+                font-size: 16px;
+            }
+        }
+    }
+}
+
+.game:hover {
+    scale: 1.1;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Swiper */
+
+.swiper {
+    width: 330px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    height: 500px;
+}
+
+.swiper-pagination-clickable {
+    padding: 4px;
+    background: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(10px);
+    border-radius: 16px;
+}
+
+.swiper-pagination-bullet {
+    background: rgb(255, 0, 0, 0.7);
+    width: 16px;
+    height: 16px;
+}
+
+.swiper-pagination-bullet-active {
+    width: 17px;
+    height: 17px;
+    background: rgb(255, 0, 0);
+}
+/* END SWIPER */
 
 
 
