--- a/css/style.scss
+++ b/css/style.scss
@@ -26,7 +26,7 @@ nav {
 }
 
 .section:nth-child(1) {
-    background-color: #1abc9c;
+    background-color: aquamarine;
 }
 
 
@@ -65,6 +65,19 @@ button {
     font-size: 16px;
 }
 
+#slide2 {
+    .header-img {
+        background-image: url("../imgs/section-header.webp");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        width: 100%;
+        height: 400px;
+    }
+}
+
+
 .results {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -86,6 +99,9 @@ button {
     -webkit-box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
     -moz-box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
     transition: all 0.3s ease;
+    img {
+        width: 100%;
+    }
     .game-details {
         padding: 16px;
         h2 {
@@ -141,10 +157,10 @@ button {
 /* Swiper */
 
 .swiper {
-    width: 330px;
+    width: 300px;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    height: 500px;
+    height: 300px;
 }
 
 .swiper-pagination-clickable {
