more style, fun animations

--- a/css/style.scss
+++ b/css/style.scss
@@ -58,7 +58,7 @@ input {
     padding: 10px;
     background-color: #333;
     color: white;
-    border: none;
+    border: 1px solid white;
 }
 #submitButton:hover {
     background-color: #00a6f0;
@@ -66,22 +66,32 @@ input {
     transition: all 0.2s ease;
 }
 
+.error {
+    animation: shake 0.2s ease-in-out 0s 2;
+    border: 1px solid red;
+    box-shadow: 0 0 1rem #ff0000;
+  }
+
 #formMessage {
     margin-top: 10px;
     color: red;
-    font-size: 20px;
+    font-size: 16px;
     text-align: center;
 }
 
 #slide2 {
-    .header-img {
-        background-image: url("../imgs/section-header.webp");
+    .header {
+        background-image: url("../imgs/section-header.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
         width: 100%;
         height: 400px;
+    }
+    h1 {
+        text-align: center;
+        padding-top: 100px;
     }
 }
 
@@ -154,6 +164,7 @@ input {
     -webkit-box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
     -moz-box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
     transition: all 0.3s ease;
+    filter: grayscale(50%);
     img {
         width: 100%;
     }
@@ -202,17 +213,103 @@ input {
 }
 
 .game:hover {
-    scale: 1.1;
-    transition: all 0.3s ease;
+    scale: 1.05;
+    transition: all 0.2s ease;
+    filter: grayscale(0%);
+}
+.results:has(.game:hover) .game:not(:hover) {
+    filter: blur(2px) grayscale(50%);
+  }
+
+
+#backArrow {
+    position: fixed;
+    top: 30px;
+    z-index: 200;
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    margin-left: 20px;
+    font-size: 20px;
+    border-radius: 50%;
+    border: 2px solid white;
+    transition: all 0.2s ease;
+}
+#backArrow:hover {
+    cursor: pointer;
+    background-color: #00a6f0;
+    transition: all 0.2s ease;
+}
+
+.details-page {
+    background-color: #000000a2;
+    .top-img{
+        padding-top: 30px;
+        display: flex;
+        justify-content: center;
+        img{
+            height: 500px;
+        }
+    }
+    .details-title {
+        text-align: center;
+    }
+    .details-header {
+        color: #d4d4d4;
+        font-style: italic;
+        font-size: 22px;
+        padding: 10px 300px;
+    }
+    .details-extras {
+        display: flex;
+        justify-content: space-around;
+        padding: 10px 300px;
+        .details-price{
+
+        }
+        .extras-box {
+            font-size: 32px;
+            .details-genre {
+                color: #00a6f0;
+            }
+            .details-platform {
+                color: #959595;
+            }
+        }
+    }
+    .details-description {
+        margin: 10px 300px;
+        font-size: 20px;
+    }
+    .bottom-img{
+        margin-top: 50px;
+        display: flex;
+        justify-content: center;
+        img{
+            height: 500px;
+        }
+    }
 }
 
 
 
 
 
-
-
-
+@keyframes shake {
+    0% {
+      margin-left: 0rem;
+    }
+    25% {
+      margin-left: 0.5rem;
+    }
+    75% {
+      margin-left: -0.5rem;
+    }
+    100% {
+      margin-left: 0rem;
+    }
+  }
+  
 
 
 
