--- a/css/style.scss
+++ b/css/style.scss
@@ -81,7 +81,7 @@ input {
 
 #slide2 {
     .header {
-        background-image: url("../imgs/section-header.jpg");
+        background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../imgs/section-header.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -165,11 +165,18 @@ input {
     -moz-box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
     transition: all 0.3s ease;
     filter: grayscale(50%);
+    .gradient {
+        border-radius: 8px;
+    }
+    .gradient:hover {
+        padding: 4px;
+        background-image: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(6, 0, 118) 23%, rgb(0, 0, 0)  48%, rgb(0, 0, 0)  100%);
+        animation: border 0.5s ease infinite;
+        cursor: pointer;
+    }
     img {
         width: 100%;
-    }
-    img:hover {
-        cursor: pointer;
+        height: 100%;
     }
     .game-details {
         padding: 16px;
@@ -218,13 +225,13 @@ input {
     filter: grayscale(0%);
 }
 .results:has(.game:hover) .game:not(:hover) {
-    filter: blur(2px) grayscale(50%);
+    filter: grayscale(75%);
   }
 
 
 #backArrow {
     position: fixed;
-    top: 30px;
+    top: 60px;
     z-index: 200;
     background-color: #333;
     color: white;
@@ -252,6 +259,7 @@ input {
         }
     }
     .details-title {
+        font-family: "Russo One", sans-serif;
         text-align: center;
     }
     .details-header {
@@ -264,9 +272,6 @@ input {
         display: flex;
         justify-content: space-around;
         padding: 10px 300px;
-        .details-price{
-
-        }
         .extras-box {
             font-size: 32px;
             .details-genre {
@@ -310,11 +315,35 @@ input {
     }
   }
   
-
-
-
-
-
+  @keyframes border {
+    0% {
+        background-image: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(6, 0, 118) 23%, rgb(0, 0, 0)  48%, rgb(0, 0, 0) 100%);
+    }
+    12% {
+        background-image: linear-gradient(135deg, rgb(0, 0, 0) 0%, rgb(6, 0, 118) 23%, rgb(0, 0, 0)  48%, rgb(0, 0, 0) 100%);
+    }
+    25% {
+        background-image: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(6, 0, 118) 23%, rgb(0, 0, 0)  48%, rgb(0, 0, 0) 100%);
+    }
+    33% {
+        background-image: linear-gradient(225deg, rgb(0, 0, 0) 0%, rgb(6, 0, 118) 23%, rgb(0, 0, 0)  48%, rgb(0, 0, 0) 100%);
+    }
+    50% {
+        background-image: linear-gradient(270deg, rgb(0, 0, 0) 0%, rgb(6, 0, 118) 23%, rgb(0, 0, 0)  48%, rgb(0, 0, 0) 100%);
+    }
+    62% {
+        background-image: linear-gradient(315deg, rgb(0, 0, 0) 0%, rgb(6, 0, 118) 23%, rgb(0, 0, 0)  48%, rgb(0, 0, 0) 100%);
+    }
+    75% {
+        background-image: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(6, 0, 118) 23%, rgb(0, 0, 0)  48%, rgb(0, 0, 0) 100%);
+    }
+    87% {
+        background-image: linear-gradient(45deg, rgb(0, 0, 0) 0%, rgb(6, 0, 118) 23%, rgb(0, 0, 0)  48%, rgb(0, 0, 0) 100%);
+    }
+    100% {
+        background-image: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(6, 0, 118) 23%, rgb(0, 0, 0)  48%, rgb(0, 0, 0) 100%);
+    }
+  }
 
 /* Swiper */
 
@@ -332,7 +361,7 @@ input {
 }
 
 .swiper-pagination-bullet {
-    background: rgb(0, 78, 109);
+    background: rgb(0, 60, 255);
     width: 16px;
     height: 16px;
 }
@@ -340,9 +369,55 @@ input {
 .swiper-pagination-bullet-active {
     width: 17px;
     height: 17px;
-    background: rgb(0, 183, 255);
+    background: rgb(0, 0, 255);
 }
 /* END SWIPER */
 
 
 
+@media only screen and (max-width: 1200px) {
+    .section {
+        font-size: 2em;
+        text-align: center;
+    }
+    form {
+        margin-left: 50px;
+    }
+    .filter-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    select {
+        width: 600px;
+    }
+    .results {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    #backArrow {
+        margin-left: -350px;
+    }
+    .details-page {
+        .details-header {
+            font-size: 22px;
+            padding: 10px 100px;
+        }
+        .details-extras {
+            padding: 10px 100px;
+        }
+        .details-description {
+            margin: 10px 100px;
+        }
+    }
+}
+@media only screen and (max-width: 768px){
+    .results {
+        grid-template-columns: 1fr;
+    }    
+    select {
+        max-width: 300px;
+    }
+    #backArrow {
+        margin-left: -275px;
+    }
+}
